  Fix issue MR-97 - Integrate Dutch translation
  Fix issue MR-98 - Integrate Russian and Ukranian translations
  Fix issue MR-99 - Integrate Spanish translation
  Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
  Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
  Fix issue MR-181 - Sessions on startup
  Fix issue MR-277 - Inheritance configuration button not appear in configuration tab 
  Added compatibility check for "Use FIPS compliant algorithms" security setting.
  Improved reporting of errors when encrypting and decrypting connection files.
  Added partial Polish translation.
  The panel tabs are now hidden if only one panel is open.
  Fix focus issue with RDP connections when changing tabs.
  Show changes live as connection tabs are being dragged around to change their order.
  Updated PuTTY to version 0.62.
  Improved error handling when loading connection files.
  Fixed bugs with creating a new connection file.
  A backup of the connection file is saved when it is loaded. The most recent ten backup copies are kept.
  Added the option to use a smart card for RD Gateway credentials.
  Made the use of CredSSP for RDP connections optional.
  Updated VncSharpNG to version 1.2.4440.36644.
  Added debugging symbols for VncSharpNG.
  Improved the use of Tab and Shift-Tab to cycle through entries in the Config grid.

1.69 (2011-12-09):
  Fixed issue #66 - Fresh Install Fails to Create Config
  Fixed issue #69 - Connection file gets erased
  Fixed issue #72 - scrollbars added to RDP window after minimize/restore of mRemoteNG
  Disabled automatic updates in the portable edition
  Fixed file name in window title changing when exporting an XML file.
  Fixed Use only Notifications panel checkbox.
  Updated PuTTY to version 0.61
  Binaries are now digitally signed
  Added Credits, License, and Version History items to the Start Menu and made Start Menu item names localizable.

1.68 (2011-07-07):