@@ -9,6 +9,7 @@
   Fix issue MR-99 - Integrate Spanish translation
   Fix issue MR-131 - RD Gateway does not respect setting for use different credentials
   Fix issue MR-172 - RDGatewayPassword is unencrypted in confCons.xml file
+  Fix issue MR-176 - Del key while editing connection name triggers 'Delete Connection'
   Fix issue MR-181 - Sessions on startup
   Fix issue MR-277 - Inheritance configuration button not appear in configuration tab 
   Added compatibility check for "Use FIPS compliant algorithms" security setting.
